# microbit-music-play

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: controls.rs  data.rs  display.rs  main.rs  speaker.rs
src/display/: numbers.rs
src/speaker/: music.rs
