[package]
name = "led"
version = "0.1.0"
edition = "2021"

[dependencies.microbit-v2]
version = "0.15.1"
optional = true

[dependencies.microbit]
version = "0.15.1"
optional = true

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.5.0" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
lsm303agr = "0.2.2"
nb = "1.0.0"
libm = "0.2.1"
heapless = "0.8.0"
tiny-led-matrix = "1.0.1"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.5.0" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

[features]
default = ["v2"]
v2 = ["microbit-v2"]
v1 = ["microbit"]
