[package]
name = "led"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embedded-io-async = { version = "0.6.1" }

defmt = "0.3.8"
defmt-rtt = "0.4.1"

static_cell = "2"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }
embedded-storage = "0.3.1"
usbd-hid = "0.8.1"
serde = { version = "1.0.215", default-features = false }
heapless = "0.8.0"

[profile.release]
debug = 2
