[package]
name = "led-async"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-futures = { version = "0.1.1" }
embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[profile.release]
debug = 2
